<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calc">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/calcfon" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/calcCof"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/error1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="100dp"
            android:text="@string/Null"
            android:textColor="@color/red" />


        <LinearLayout
            android:id="@+id/linleyCalc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOutCof"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shaperound"
                android:text="@string/Null"
                android:textColor="@color/black"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/txtOutRez"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Null"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRetCalc"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:text="@string/btnRetCalc" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBackToList"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/btnBackToList" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linleyCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="132dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/CalcMCofIn"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/CalcMCofIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text=""
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/CalcTimeIn"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/CalcTimeIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text=""
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/CalcMDoneCofIn"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/CalcMDoneCofIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text=""
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMultiply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/white"
                android:text="@string/CalcMultiply"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBackToList2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/white"
                android:text="@string/btnBackToList"
                android:textColor="@color/black" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="250dp"
            android:indeterminateTintMode="src_in"
            android:indeterminateTint="@color/white"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="240dp"
            android:indeterminate="false"
            android:max="3"
            android:progress="0"
            android:visibility="invisible" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>