<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recept">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundTint="@color/black"
        android:foregroundTintMode="add"
        android:hapticFeedbackEnabled="false"
        app:guidelineUseRtl="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shapegradient" />

        <ScrollView
            android:id="@+id/svWinter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-484dp"
            android:visibility="visible"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/winter" />

            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/svSpring"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-693dp"
            android:visibility="invisible"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/spring" />

            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/svSummer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-640dp"
            android:visibility="invisible"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/summer" />

            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/svAutumn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-454dp"
            android:visibility="invisible"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/autumn" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnWinter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/lightblue"
                android:text="@string/recWinter" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSpring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/pink"
                android:text="@string/recSpring" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSummer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/green"
                android:text="@string/recSummer" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAutumn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/orange"
                android:text="@string/recAutumn" />

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBackToList3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_gravity="bottom"
            android:text="@string/btnBackToList"
            android:textColor="@color/black" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>