<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chose">

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/chosefon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="SpeakableTextPresentCheck">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/chose"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="34sp"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btnCalc"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:background="@drawable/calc"
                                android:text="@string/Null"
                                tools:ignore="SpeakableTextPresentCheck"/>

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btnCalctxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/nullshape"
                                android:text="@string/calcCof"
                                android:textAlignment="center"
                                android:textSize="18dp"
                                android:textAllCaps="false"
                                android:textColor="@color/white" />
                        </LinearLayout>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btnRecept"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:background="@drawable/folder"
                                android:text="@string/Null"
                                tools:ignore="SpeakableTextPresentCheck"/>

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btnRecepttxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/nullshape"
                                android:layout_weight="1"
                                android:text="@string/recept"
                                android:textSize="18dp"
                                android:textAlignment="center"
                                android:textAllCaps="false"
                                android:textColor="@color/white" />
                        </LinearLayout>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btnListDay"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_marginLeft="10dp"
                                android:background="@drawable/check"
                                android:text="@string/Null"
                                tools:ignore="SpeakableTextPresentCheck"/>

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btnListDaytxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_marginTop="-8dp"
                                android:text="@string/check"
                                android:background="@drawable/nullshape"
                                android:textAllCaps="false"
                                android:textSize="18dp"
                                android:textColor="@color/white" />
                        </LinearLayout>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="40dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btnListNight"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_marginLeft="10dp"
                                android:background="@drawable/check2"
                                android:text="@string/Null"
                                tools:ignore="SpeakableTextPresentCheck"/>

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btnListNighttxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_marginTop="-8dp"
                                android:text="@string/check2"
                                android:background="@drawable/nullshape"
                                android:textAllCaps="false"
                                android:textSize="18dp"
                                android:textColor="@color/white" />
                        </LinearLayout>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="40dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btnScript"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_marginLeft="20dp"
                                android:background="@drawable/speak"
                                android:text="@string/Null"
                                tools:ignore="SpeakableTextPresentCheck"/>

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btnScripttxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/script"
                                android:textAlignment="center"
                                android:background="@drawable/nullshape"
                                android:textAllCaps="false"
                                android:textSize="18dp"
                                android:textColor="@color/white" />
                        </LinearLayout>
                    </TableRow>

                </TableLayout>
            </ScrollView>

        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>